# zero2prod-actix-web

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml
configuration/: base.yaml
migrations/: 20250305083413_create_subscriptions_table.sql  20250318085534_make_status_not_null_in_subscriptions.sql  20250318085715_create_subscription_tokens_table.sql  20250325080725_create_users_table.sql  20250401085240_seed_user.sql  20250410125252_create_idempotency_table.sql  20250414094601_create_newsletter_issues_table.sql  20250414094637_create_issue_delivery_queue_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/configuration/: base.yaml  production.yaml
src/domain/: new_subscriber.rs  subscriber_email.rs
src/idempotency/: persistence.rs
src/routes/: subscriptions.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs
